rbac-2/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRoleAuth
metadata:
  name: block-latest-tag
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["*"]
  parameters:
          namespaces:
                  - "kube-system"
