rbac-2/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sroleauth
spec:
  crd:
    spec:
      names:
        kind: K8sRoleAuth
      validation:
              openAPIV3Schema:
                      properties:
                              namespaces:
                                      type: array
                                      items:
                                              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
       package k8sroleauth
       violation[{ "msg": msg}]{
         input.review.object.kind == "ServiceAccount"
         namespace := input.review.object.metadata.namespace 
         allowed_namespace := input.parameters.namespaces[_]
         not contains(allowed_namespace,namespace)
         msg := "not allowed" }
